# class_copilot

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py  start.bat  test_dashscope_asr.py  test_doubao_interactive.py  test_doubao_quick.py  test_doubao_ws.py  test_timer.py
class_copilot/: __init__.py  __main__.py  app.py  config.py  database.py  logger.py
class_copilot/frontend/: index.html
class_copilot/frontend/assets/: app.js  style.css
class_copilot/models/: models.py
class_copilot/routes/: api_routes.py  ws_routes.py
class_copilot/services/: asr_service.py  audio_service.py  doubao_asr_service.py  doubao_refinement_service.py  encryption_service.py  hotkey_service.py  llm_service.py  notification_service.py  oss_service.py  question_detector.py  qwen_omni_asr_service.py  qwen_omni_refinement_service.py  refinement_service.py  session_manager.py  tray_service.py
docs/: backend-architecture.md  code_review-v3.md  code_review.md  frontend-and-database-design.md  full_audit.md  requirements-v2.md  requirements.md
src/: app.py  main.py
src/asr/: audio_capture.py  dashscope_asr.py  iflytek_client.py  voiceprint.py
src/config/: constants.py  settings.py
src/core/: session_manager.py  speaker_manager.py  transcript.py
src/llm/: answer_generator.py  question_detector.py  qwen_client.py  translator.py
src/storage/: audio_storage.py  database.py  models.py
src/ui/: answer_view.py  history_view.py  main_window.py  question_input.py  settings_dialog.py  speaker_dialog.py  styles.py  system_tray.py  transcript_view.py
src/utils/: crypto.py  hotkeys.py  notifier.py
