[project]
name = "class-copilot"
version = "0.1.0"
description = "听课助手 - 实时课堂辅助工具"
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.6.0",
    "pyaudio>=0.2.14",
    "websockets>=12.0",
    "openai>=1.12.0",
    "cryptography>=42.0.0",
    "pynput>=1.7.6",
    "winotify>=1.1.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
