[project]
name = "class-copilot"
version = "2.0.0"
description = "实时听课辅助工具 - 课堂语音转写、问题检测与智能答案生成"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "sounddevice>=0.5.0",
    "lameenc>=1.7.0",
    "numpy>=1.26.0",
    "dashscope>=1.20.0",
    "openai>=1.50.0",
    "httpx>=0.27.0",
    "pystray>=0.19.0",
    "keyboard>=0.13.5",
    "Pillow>=10.0.0",
    "loguru>=0.7.0",
    "cryptography>=43.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "win10toast-click>=0.1.2",
    "aiofiles>=24.1.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
